# src/routes/index.js
@@ -375,13 +375,14 @@ router.get("/", async (req, res) => {
 </body>
 </html>
   `);
-  res.end();
+    res.end();
 });
 
 router.use("/", require("./auth"));
 router.use("/", require("./users"));
-router.use("/inventories",require("./inventories"));
-router.use("/items",require("./items"));
-router.use("/baseitems",require("./baseItems"));
+router.use("/inventories", require("./inventories"));
+router.use("/items", require("./items"));
+router.use("/baseitems", require("./baseItems"));
+router.use("/system", require("./system"));
 
 module.exports = router;
